--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "@tayyabafarid/word_counter-project",
-  "version": "1.0.0",
+  "name": "hgdv_980_word_counter-project",
+  "version": "1.0.1",
   "description": "This is a word counter project",
   "main": "index.js",
   "type": "module",
-  "publishConfig": {
-    "access": "public"
-  },
-  "bin": "index.js",
+"bin": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
